<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="0.2">

        <TextView
            android:id="@+id/tituloA1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAlignment="center"
            android:hint="@string/tituloA1"
            android:background="@color/purple_200"
            android:textSize="30dp"
            android:textStyle="bold">
        </TextView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="2">

        <TextView
            android:id="@+id/resultadoA1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAlignment="center"
            android:background="@color/teal_200">

        </TextView>
    </LinearLayout>
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1.5">

        <Button
            android:id="@+id/botonA1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/boton_style"
            android:text="@string/send"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            />
        <EditText
            android:id="@+id/textoA1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/texto_nombre"
            android:textAlignment="center"
            android:inputType="text"
            android:imeOptions="actionDone"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="30dp"
            android:layout_gravity="center">
        </EditText>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1">
        <Button
            android:id="@+id/botonSalir"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/boton_style"
            android:text="@string/salir"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            />
    </LinearLayout>


</LinearLayout>