<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="0.2">

        <TextView
            android:id="@+id/tituloA2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAlignment="center"
            android:hint="@string/tituloA2"
            android:background="@color/purple_200"
            android:textSize="30dp"
            android:textStyle="bold">
        </TextView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="2">

        <TextView
            android:id="@+id/resultadoA2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAlignment="center"
            android:background="@color/teal_200">

        </TextView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="2">

            <EditText
                android:id="@+id/textoA2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:hint="@string/texto_mensaje"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:textAlignment="center"></EditText>
        </LinearLayout>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="3">

            <Button
                android:id="@+id/botonA2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:background="@drawable/boton_style"
                android:text="@string/send_v2" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1">
        <Button
            android:id="@+id/botonvolver"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/boton_style"
            android:text="@string/volver"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"
            />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1">
        <Button
            android:id="@+id/nuevaA1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/boton_style"
            android:text="@string/new_a1"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"
            />
        </LinearLayout>
    </LinearLayout>


</LinearLayout>